# VERSE

./: .gitignore  ATTRIBUTIONS.md  CLAUDE.md  CONTRIBUTING.md  FRONTENDREADME.md  README.md  index.html  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
continuity-engine/: README.md  main.py  pyproject.toml  requirements.txt
continuity-engine/app/: __init__.py  engine.py
continuity-engine/app/api/: __init__.py  auth.py  projects.py  routes.py  upload.py
continuity-engine/app/config/: __init__.py  project_config.json
continuity-engine/app/core/: __init__.py  database.py  dependencies.py  security.py
continuity-engine/app/feedback/: human_feedback.py
continuity-engine/app/graph/: builder.py  memory.py  storage.py  timeline.py
continuity-engine/app/ingestion/: dynamic_parser.py  entity_matcher.py  normaliser.py
continuity-engine/app/models/: schemas.py
continuity-engine/app/reasoning/: assumptions.py  conflict_detector.py  rules.py
continuity-engine/app/reporting/: explanations.py  suggestions.py
continuity-engine/app/scoring/: category_scores.py  overall_score.py
continuity-engine/app/services/: __init__.py  watsonx.py
continuity-engine/docs/: CONTEXT.md  INTEGRATION.md  PROGRESS.md
continuity-engine/examples/: footage_observations.json  run_demo.py  script_scenes.json
continuity-engine/tests/: conftest.py  test_api.py  test_graph.py  test_ingestion.py  test_reasoning.py  test_scoring_and_feedback.py
src/: vite-env.d.ts
src/app/: App.tsx
src/app/data/: mockData.ts
src/app/lib/: api.ts  hooks.ts
src/styles/: fonts.css  theme.css
(+4 files in other folders)
